--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -80,6 +80,10 @@
         width: 100%;
     }
 
+    .app__specialMenu-menu_img img {
+        height: 500px;
+    }
+
     .app__specialMenu-menu_heading {
         font-size: 35px;
         line-height: 48.5px;
